add detail function

--- a/src/app/books/detail-books/detail-books.component.html
+++ b/src/app/books/detail-books/detail-books.component.html
@@ -1,1 +1,7 @@
-<p>detail-books works!</p>
+<div class="container">
+  <br>
+  <h3 class="float-left">Chi tiết sách</h3>
+  <a [routerLink]="['']">
+    <button class="btn btn-success float-right">Về trang danh sách</button>
+  </a>
+</div>
