--- a/src/app/books/add-books/add-books.component.html
+++ b/src/app/books/add-books/add-books.component.html
@@ -17,7 +17,8 @@
       <tr>
         <td></td>
         <td>
-          <button class="btn btn-success">Submit</button>
+          <button class="btn btn-success">Thêm</button> &nbsp;
+          <a [routerLink]="['']"><button class="btn btn-warning">Thoát</button></a>
         </td>
       </tr>
     </table>
