--- a/src/app/books/list-books/list-books.component.html
+++ b/src/app/books/list-books/list-books.component.html
@@ -24,7 +24,7 @@
           <td>{{book.description}}</td>
           <td>
             <a [routerLink]="['/update-book', book.id]">
-              <button class="btn btn-success">Sửa</button>
+              <button class="btn btn-warning">Sửa</button>
             </a><a [routerLink]="['/delete-book', book.id]">
               <button class="btn btn-danger">Xóa</button>
             </a></td>
