--- a/src/app/books/add-books/add-books.component.html
+++ b/src/app/books/add-books/add-books.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <h1>Tạo mới sách</h1>
-  <form (ngSubmit)="addBook()">
+  <form #addForm="ngForm" (ngSubmit)="addBook()">
     <table>
       <tr>
         <td>Title:</td>
-        <td><input type="text" name="title" [(ngModel)]="book.title"></td>
+        <td><input type="text" name="title" required [(ngModel)]="book.title"></td>
       </tr>
       <tr>
         <td>Author:</td>
@@ -17,7 +17,7 @@
       <tr>
         <td></td>
         <td>
-          <button class="btn btn-success">Thêm</button> &nbsp;
+          <button class="btn btn-success" [disabled]="!addForm.form.valid">Thêm</button> &nbsp;
           <a [routerLink]="['']"><button class="btn btn-warning">Thoát</button></a>
         </td>
       </tr>
